tests/should_succeed/ghost/assert_in_ghost.coma
module M_assert_in_ghost__ghost_only
  use creusot.int.Int32
  use creusot.prelude.Any
  
  let rec new (x: ()) (return (x'0: ())) = any [ return' (result: ()) -> {result = x} (! return {result}) ]
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec ghost_only (return (x: ())) = (! bb0
    [ bb0 = s0
      [ s0 = [ &x <- (1: Int32.t) ] s1
      | s1 = {[@expl:assertion] x = (1: Int32.t)} s2
      | s2 = new {_2} (fun (_ret: ()) -> [ &_1 <- _ret ] s3)
      | s3 = bb1 ]
    | bb1 = return {_0} ]
    [ & _0: () = Any.any_l () | & _1: () = Any.any_l () | & _2: () = Any.any_l () | & x: Int32.t = Any.any_l () ])
    [ return (result: ()) -> (! return {result}) ]
end
module M_assert_in_ghost__ghost_capture
  use creusot.int.Int32
  use creusot.prelude.Any
  
  let rec new (x: ()) (return (x'0: ())) = any [ return' (result: ()) -> {result = x} (! return {result}) ]
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec ghost_capture (return (x: ())) = (! bb0
    [ bb0 = s0
      [ s0 = [ &x <- (42: Int32.t) ] s1
      | s1 = [ &y <- x ] s2
      | s2 = {[@expl:assertion] y = (42: Int32.t)} s3
      | s3 = new {_3} (fun (_ret: ()) -> [ &_2 <- _ret ] s4)
      | s4 = bb1 ]
    | bb1 = return {_0} ]
    [ & _0: () = Any.any_l ()
    | & x: Int32.t = Any.any_l ()
    | & _2: () = Any.any_l ()
    | & _3: () = Any.any_l ()
    | & y: Int32.t = Any.any_l () ]) [ return (result: ()) -> (! return {result}) ]
end
module M_assert_in_ghost__ghost_mutate
  use creusot.int.Int32
  use creusot.prelude.MutBorrow
  use creusot.prelude.Any
  
  type tuple = { f0: Int32.t; f1: Int32.t }
  
  let rec new (x: tuple) (return (x'0: tuple)) = any [ return' (result: tuple) -> {result = x} (! return {result}) ]
  
  let rec deref_mut (self: MutBorrow.t tuple) (return (x: MutBorrow.t tuple)) = any
    [ return' (result: MutBorrow.t tuple) -> {result = self} (! return {result}) ]
  
  predicate resolve [@inline:trivial] (self: MutBorrow.t tuple) = self.final = self.current
  
  meta "rewrite_def" predicate resolve
  
  predicate resolve'0 [@inline:trivial] (_0: MutBorrow.t tuple) = resolve _0
  
  meta "rewrite_def" predicate resolve'0
  
  let rec new'0 (x: ()) (return (x'0: ())) = any [ return' (result: ()) -> {result = x} (! return {result}) ]
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec ghost_mutate (return (x: ())) = (! bb0
    [ bb0 = s0
      [ s0 = [ &_2 <- { f0 = (2: Int32.t); f1 = (3: Int32.t) } ] s1
      | s1 = new {_2} (fun (_ret: tuple) -> [ &p <- _ret ] s2)
      | s2 = bb1 ]
    | bb1 = s0
      [ s0 = MutBorrow.borrow_mut <tuple> {p} (fun (_ret: MutBorrow.t tuple) -> [ &_6 <- _ret ] [ &p <- _ret.final ] s1)
      | s1 = deref_mut {_6} (fun (_ret: MutBorrow.t tuple) -> [ &_5 <- _ret ] s2)
      | s2 = bb2 ]
    | bb2 = s0
      [ s0 = [ &_5 <- { _5 with current = { _5.current with f0 = (4: Int32.t) } } ] s1
      | s1 = -{resolve'0 _5}- s2
      | s2 = new'0 {_4} (fun (_ret: ()) -> [ &_3 <- _ret ] s3)
      | s3 = bb3 ]
    | bb3 = s0
      [ s0 = {[@expl:assertion] p.f0 = (4: Int32.t)} s1
      | s1 = {[@expl:assertion] p.f1 = (3: Int32.t)} s2
      | s2 = new'0 {_8} (fun (_ret: ()) -> [ &_7 <- _ret ] s3)
      | s3 = bb4 ]
    | bb4 = return {_0} ]
    [ & _0: () = Any.any_l ()
    | & p: tuple = Any.any_l ()
    | & _2: tuple = Any.any_l ()
    | & _3: () = Any.any_l ()
    | & _4: () = Any.any_l ()
    | & _5: MutBorrow.t tuple = Any.any_l ()
    | & _6: MutBorrow.t tuple = Any.any_l ()
    | & _7: () = Any.any_l ()
    | & _8: () = Any.any_l () ]) [ return (result: ()) -> (! return {result}) ]
end
