tests/should_fail/wrong_permissions.coma
module M_wrong_permissions__unknown_permcell_permission
  use creusot.int.Int32
  use creusot.prelude.Any
  
  type t_PermCell
  
  type t_PermCellOwn
  
  type t_Id
  
  function id (self: t_PermCell) : t_Id
  
  function id'0 (self: t_PermCellOwn) : t_Id
  
  function val' (self: t_PermCellOwn) : Int32.t
  
  function view [@inline:trivial] (self: t_PermCellOwn) : Int32.t = val' self
  
  meta "rewrite_def" function view
  
  let rec borrow (self: t_PermCell) (perm: t_PermCellOwn) (return (x: Int32.t)) = {[@expl:borrow requires] id self
    = id'0 perm}
    any [ return' (result: Int32.t) -> {result = view perm} (! return {result}) ]
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec unknown_permcell_permission (cell: t_PermCell) (perm: t_PermCellOwn) (return (x: ())) = (! bb0
    [ bb0 = s0 [ s0 = borrow {cell} {perm} (fun (_ret: Int32.t) -> [ &_3 <- _ret ] s1) | s1 = bb1 ]
    | bb1 = return {_0} ]
    [ & _0: () = Any.any_l ()
    | & cell: t_PermCell = cell
    | & perm: t_PermCellOwn = perm
    | & _3: Int32.t = Any.any_l () ]) [ return (result: ()) -> (! return {result}) ]
end
module M_wrong_permissions__wrong_permcell_permission
  use creusot.int.Int32
  use creusot.prelude.Any
  
  type t_PermCell
  
  type t_PermCellOwn
  
  type tuple = { f0: t_PermCell; f1: t_PermCellOwn }
  
  type t_Id
  
  function id (self: t_PermCell) : t_Id
  
  function id'0 (self: t_PermCellOwn) : t_Id
  
  function val' (self: t_PermCellOwn) : Int32.t
  
  function view [@inline:trivial] (self: t_PermCellOwn) : Int32.t = val' self
  
  meta "rewrite_def" function view
  
  let rec new (value: Int32.t) (return (x: tuple)) = any
    [ return' (result: tuple) -> {id result.f0 = id'0 result.f1} {view result.f1 = value} (! return {result}) ]
  
  let rec borrow (self: t_PermCellOwn) (return (x: t_PermCellOwn)) = any
    [ return' (result: t_PermCellOwn) -> {result = self} (! return {result}) ]
  
  let rec borrow'0 (self: t_PermCell) (perm: t_PermCellOwn) (return (x: Int32.t)) = {[@expl:borrow requires] id self
    = id'0 perm}
    any [ return' (result: Int32.t) -> {result = view perm} (! return {result}) ]
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec wrong_permcell_permission (return (x: ())) = (! bb0
    [ bb0 = s0 [ s0 = new {(1: Int32.t)} (fun (_ret: tuple) -> [ &_2 <- _ret ] s1) | s1 = bb1 ]
    | bb1 = s0
      [ s0 = [ &cell <- _2.f0 ] s1 | s1 = new {(1: Int32.t)} (fun (_ret: tuple) -> [ &_4 <- _ret ] s2) | s2 = bb2 ]
    | bb2 = s0
      [ s0 = [ &perm <- _4.f1 ] s1 | s1 = borrow {perm} (fun (_ret: t_PermCellOwn) -> [ &_7 <- _ret ] s2) | s2 = bb3 ]
    | bb3 = s0 [ s0 = borrow'0 {cell} {_7} (fun (_ret: Int32.t) -> [ &_5 <- _ret ] s1) | s1 = bb4 ]
    | bb4 = return {_0} ]
    [ & _0: () = Any.any_l ()
    | & cell: t_PermCell = Any.any_l ()
    | & _2: tuple = Any.any_l ()
    | & perm: t_PermCellOwn = Any.any_l ()
    | & _4: tuple = Any.any_l ()
    | & _5: Int32.t = Any.any_l ()
    | & _7: t_PermCellOwn = Any.any_l () ]) [ return (result: ()) -> (! return {result}) ]
end
module M_wrong_permissions__unknown_ptr_own_permission
  use creusot.prelude.Opaque
  use creusot.int.Int32
  use creusot.prelude.Ptr
  use creusot.int.UInt64
  use creusot.prelude.Any
  
  type t_PtrOwn
  
  predicate is_null_logic (self: Opaque.ptr) = Ptr.addr_logic_u64 self = (0: UInt64.t)
  
  function ptr (self: t_PtrOwn) : Opaque.ptr
  
  predicate ptr_is_aligned_opaque (self: t_PtrOwn)
  
  predicate metadata_matches (_value: Int32.t) (_metadata: ()) = true
  
  function val' (self: t_PtrOwn) : Int32.t
  
  function metadata_logic (_1: Opaque.ptr) : ()
  
  predicate inv (_1: Opaque.ptr)
  
  axiom inv_axiom [@rewrite]: forall x: Opaque.ptr [inv x]. inv x = true
  
  predicate invariant' (self: t_PtrOwn) =
    not is_null_logic (ptr self)
    /\ ptr_is_aligned_opaque self /\ metadata_matches (val' self) (metadata_logic (ptr self)) /\ inv (ptr self)
  
  predicate inv'0 (_1: t_PtrOwn)
  
  axiom inv_axiom'0 [@rewrite]: forall x: t_PtrOwn [inv'0 x]. inv'0 x = invariant' x
  
  predicate invariant''0 [@inline:trivial] (self: t_PtrOwn) = inv'0 self
  
  meta "rewrite_def" predicate invariant''0
  
  predicate inv'1 (_1: t_PtrOwn)
  
  axiom inv_axiom'1 [@rewrite]: forall x: t_PtrOwn [inv'1 x]. inv'1 x = invariant''0 x
  
  predicate invariant''1 [@inline:trivial] (self: t_PtrOwn) = inv'1 self
  
  meta "rewrite_def" predicate invariant''1
  
  predicate inv'2 (_1: t_PtrOwn)
  
  axiom inv_axiom'2 [@rewrite]: forall x: t_PtrOwn [inv'2 x]. inv'2 x = invariant''1 x
  
  let rec as_ref (ptr'0: Opaque.ptr) (own: t_PtrOwn) (return (x: Int32.t)) =
    {[@expl:as_ref 'own' type invariant] inv'2 own}
    {[@expl:as_ref requires] ptr'0 = ptr own}
    any [ return' (result: Int32.t) -> {result = val' own} (! return {result}) ]
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec unknown_ptr_own_permission (ptr'0: Opaque.ptr) (perm: t_PtrOwn) (return (x: ())) =
    {[@expl:unknown_ptr_own_permission 'perm' type invariant] inv'2 perm}
    (! bb0
    [ bb0 = s0 [ s0 = as_ref {ptr'0} {perm} (fun (_ret: Int32.t) -> [ &_3 <- _ret ] s1) | s1 = bb1 ]
    | bb1 = return {_0} ]
    [ & _0: () = Any.any_l () | & ptr'0: Opaque.ptr = ptr'0 | & perm: t_PtrOwn = perm | & _3: Int32.t = Any.any_l () ])
    [ return (result: ()) -> (! return {result}) ]
end
module M_wrong_permissions__wrong_ptr_own_permission
  use creusot.int.Int32
  use creusot.prelude.Opaque
  use creusot.prelude.Ptr
  use creusot.int.UInt64
  use creusot.prelude.Any
  
  type t_PtrOwn
  
  type tuple = { f0: Opaque.ptr; f1: t_PtrOwn }
  
  predicate is_null_logic (self: Opaque.ptr) = Ptr.addr_logic_u64 self = (0: UInt64.t)
  
  function ptr (self: t_PtrOwn) : Opaque.ptr
  
  predicate ptr_is_aligned_opaque (self: t_PtrOwn)
  
  predicate metadata_matches (_value: Int32.t) (_metadata: ()) = true
  
  function val' (self: t_PtrOwn) : Int32.t
  
  function metadata_logic (_1: Opaque.ptr) : ()
  
  predicate inv (_1: Opaque.ptr)
  
  axiom inv_axiom [@rewrite]: forall x: Opaque.ptr [inv x]. inv x = true
  
  predicate invariant' (self: t_PtrOwn) =
    not is_null_logic (ptr self)
    /\ ptr_is_aligned_opaque self /\ metadata_matches (val' self) (metadata_logic (ptr self)) /\ inv (ptr self)
  
  predicate inv'0 (_1: t_PtrOwn)
  
  axiom inv_axiom'0 [@rewrite]: forall x: t_PtrOwn [inv'0 x]. inv'0 x = invariant' x
  
  predicate invariant''0 [@inline:trivial] (self: t_PtrOwn) = inv'0 self
  
  meta "rewrite_def" predicate invariant''0
  
  predicate inv'1 (_1: t_PtrOwn)
  
  axiom inv_axiom'1 [@rewrite]: forall x: t_PtrOwn [inv'1 x]. inv'1 x = invariant''0 x
  
  predicate inv'2 (_1: tuple)
  
  axiom inv_axiom'2 [@rewrite]: forall x: tuple [inv'2 x]. inv'2 x = (let {f0 = x0; f1 = x1} = x in inv'1 x1)
  
  let rec new (v: Int32.t) (return (x: tuple)) = any
    [ return' (result: tuple) -> {inv'2 result} {ptr result.f1 = result.f0 /\ val' result.f1 = v} (! return {result}) ]
  
  predicate invariant''1 [@inline:trivial] (self: t_PtrOwn) = inv'1 self
  
  meta "rewrite_def" predicate invariant''1
  
  predicate inv'3 (_1: t_PtrOwn)
  
  axiom inv_axiom'3 [@rewrite]: forall x: t_PtrOwn [inv'3 x]. inv'3 x = invariant''1 x
  
  predicate invariant''2 [@inline:trivial] (self: t_PtrOwn) = inv'0 self
  
  meta "rewrite_def" predicate invariant''2
  
  predicate inv'4 (_1: t_PtrOwn)
  
  axiom inv_axiom'4 [@rewrite]: forall x: t_PtrOwn [inv'4 x]. inv'4 x = invariant''2 x
  
  predicate invariant''3 [@inline:trivial] (self: t_PtrOwn) = inv'4 self
  
  meta "rewrite_def" predicate invariant''3
  
  predicate inv'5 (_1: t_PtrOwn)
  
  axiom inv_axiom'5 [@rewrite]: forall x: t_PtrOwn [inv'5 x]. inv'5 x = invariant''3 x
  
  let rec borrow (self: t_PtrOwn) (return (x: t_PtrOwn)) = {[@expl:borrow 'self' type invariant] inv'3 self}
    any [ return' (result: t_PtrOwn) -> {inv'5 result} {result = self} (! return {result}) ]
  
  let rec as_ref (ptr'0: Opaque.ptr) (own: t_PtrOwn) (return (x: Int32.t)) =
    {[@expl:as_ref 'own' type invariant] inv'5 own}
    {[@expl:as_ref requires] ptr'0 = ptr own}
    any [ return' (result: Int32.t) -> {result = val' own} (! return {result}) ]
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec wrong_ptr_own_permission (return (x: ())) = (! bb0
    [ bb0 = s0 [ s0 = new {(1: Int32.t)} (fun (_ret: tuple) -> [ &_2 <- _ret ] s1) | s1 = bb1 ]
    | bb1 = s0
      [ s0 = [ &ptr'0 <- _2.f0 ] s1 | s1 = new {(1: Int32.t)} (fun (_ret: tuple) -> [ &_4 <- _ret ] s2) | s2 = bb2 ]
    | bb2 = s0
      [ s0 = [ &perm <- _4.f1 ] s1 | s1 = borrow {perm} (fun (_ret: t_PtrOwn) -> [ &_7 <- _ret ] s2) | s2 = bb3 ]
    | bb3 = s0 [ s0 = as_ref {ptr'0} {_7} (fun (_ret: Int32.t) -> [ &_5 <- _ret ] s1) | s1 = bb4 ]
    | bb4 = return {_0} ]
    [ & _0: () = Any.any_l ()
    | & ptr'0: Opaque.ptr = Any.any_l ()
    | & _2: tuple = Any.any_l ()
    | & perm: t_PtrOwn = Any.any_l ()
    | & _4: tuple = Any.any_l ()
    | & _5: Int32.t = Any.any_l ()
    | & _7: t_PtrOwn = Any.any_l () ]) [ return (result: ()) -> (! return {result}) ]
end
